<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">魔秀插件</string>
    <string name="process_name">com.fax.showdt.service</string>
    <string name="color">颜色</string>
    <string name="not_installed_qq">您还未安装QQ</string>
    <string name="authorize_fail_msg">授权失败,错误信息:</string>
    <string name="get_qq_userinfo_fail">获取用户QQ信息错误</string>
    <string name="custom_bind_app">关联应用:%1$s</string>


    <string name="tab_recommend">推荐</string>
    <string name="tab_mine">我的</string>
    <string name="close">关闭</string>
    <string name="cpv_default_title">挑选颜色</string>
    <string name="cpv_presets">内置颜色</string>
    <string name="cpv_custom">自定义颜色</string>
    <string name="cpv_select">选择</string>
    <string name="cpv_transparency">透明度</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>

    <string name="set_target_date">设置目标日期</string>

    <string name="app_permission01">● 存储权限</string>
    <string name="app_permission02">● 定位权限</string>
    <string name="app_permission03">● 手机信息权限</string>


    <string name="setting">设置</string>
    <string name="setting_check_version">检查更新</string>
    <string name="setting_help">使用教程</string>
    <string name="setting_common_problem">常见问题</string>
    <string name="setting_add_qq_group">加入QQ群</string>
    <string name="setting_share">分享给小伙伴</string>
    <string name="setting_feedback">我要反馈</string>
    <string name="setting_lock_switch">锁屏</string>
    <string name="setting_market_scoring">给秀桌面打分</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_login">立即登录</string>
    <string name="click_login">点击登录</string>

    <string name="countdown4_4">魔秀插件4x4</string>
    <string name="countdown3_3">魔秀插件3x3</string>
    <string name="countdown2_2">魔秀插件2x2</string>
    <string name="countdown1_1">魔秀插件1x1</string>
    <string name="countdownContent_default_desktop">点击设置倒计时\n长按可调节宽高</string>
    <string name="widget_select">选择插件</string>

    <string name="widget_click">事件</string>
    <string name="widget_click_none">无</string>
    <string name="widget_click_url">网址</string>
    <string name="widget_click_music">音乐</string>
    <string name="widget_click_application">应用</string>
    <string name="widget_click_dialog_select_app">选择应用</string>
    <string name="widget_click_dialog_loading">数据拉取中...</string>

    <string name="widget_progress">进\u3000\度</string>
    <string name="widget_progress_type">风\u3000\格</string>
    <string name="widget_progress_mode">模\u3000\式</string>
    <string name="widget_progress_fore_color">前景色</string>
    <string name="widget_progress_bg_color">背景色</string>
    <string name="widget_progress_height">高\u3000\度</string>
    <string name="widget_progress_horizontal">线性</string>
    <string name="widget_progress_circle">圆形</string>
    <string name="widget_progress_solid">平滑</string>
    <string name="widget_progress_degree">刻度</string>
    <string name="widget_progress_battery">手机电量</string>
    <string name="widget_progress_music">音乐时长</string>
    <string name="widget_progress_month">一个月</string>
    <string name="widget_progress_week">一周</string>
    <string name="widget_progress_day">一天</string>
    <string name="widget_progress_hour">一小时</string>
    <string name="widget_sticker_clip_shape">形\u3000\u3000状</string>
    <string name="widget_sticker_stroke_color">描边颜色</string>
    <string name="widget_sticker_stroke_switch">描边开关</string>
    <string name="widget_clip_circle">圆形</string>
    <string name="widget_clip_round">圆角矩形</string>
    <string name="widget_clip_love">心形</string>
    <string name="widget_clip_rect">正方形</string>
    <string name="widget_clip_pentagon">五边形</string>
    <string name="widget_text_color">颜\u3000色</string>
    <string name="widget_text_letter_spacing">字间距</string>
    <string name="widget_text_line_spacing">行间距</string>
    <string name="widget_text_shadow_radius">模糊度</string>
    <string name="widget_text_shadow_x">横偏移</string>
    <string name="widget_text_shadow_y">纵偏移</string>
    <string name="widget_text_shadow_color">阴影色</string>
    <string name="widget_text_shadow">阴\u3000影</string>
    <string name="widget_shape_height">高\u3000度</string>
    <string name="widget_shape_width">宽\u3000度</string>
    <string name="widget_shape_line_width">线\u3000宽</string>
    <string name="widget_shape_corner_width">圆\u3000角</string>
    <string name="widget_shape_gradient_orientation">方\u3000向</string>
    <string name="widget_shape_stroke_color">边框色</string>
    <string name="widget_shape_solid_color">实心色</string>
    <string name="widget_vector_stroke">描边</string>
    <string name="widget_vector_color">颜色</string>
    <string name="widget_vector_stroke_width">宽度</string>




    <string name="widget_edit_select_bg_title">选择背景板</string>
    <string name="no_widget">您还没有任何作品⊙__⊙</string>
    <string name="go_to_make_widget">去制作</string>

    <string name="privacy_protocol"><![CDATA[<font color=\"#2585FF\">《隐私条款》</font>]]></string>
    <string name="service_protocol"><![CDATA[<font color=\"#282828\">查看完整版</font><font color=\"#2585FF\">《服务协议》</font><font color=\"#282828\">和]]></string>



</resources>
