<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/navigation_setting_icon"
            android:title="@string/setting_feedback" />
        <item
            android:id="@+id/nav_add_qq"
            android:icon="@drawable/navigation_add_qq_group_icon"
            android:title="加入qq群" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/navigation_setting_icon"
            android:title="设置" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/navigation_setting_icon"
            android:title="@string/setting_help" />

        <item
            android:id="@+id/nav_check_update"
            android:icon="@drawable/navigation_setting_icon"
            android:title="@string/setting_check_version" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/navigation_setting_icon"
            android:title="@string/setting_share" />


    </group>
</menu>