<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/margin_200"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_clip_circle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:background="@drawable/common_view_click_bg_selector"
            android:gravity="center"
            android:text="@string/widget_clip_circle"
            android:textColor="@color/c_A0A0A0"
            android:textSize="@dimen/textSize_17" />

        <TextView
            android:id="@+id/tv_clip_round"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:background="@drawable/common_view_click_bg_selector"
            android:gravity="center"
            android:text="@string/widget_clip_round"
            android:textColor="@color/c_A0A0A0"
            android:textSize="@dimen/textSize_17" />

        <TextView
            android:id="@+id/tv_clip_rect"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:background="@drawable/common_view_click_bg_selector"
            android:gravity="center"
            android:text="@string/widget_clip_rect"
            android:textColor="@color/c_A0A0A0"
            android:textSize="@dimen/textSize_17" />

        <TextView
            android:id="@+id/tv_clip_love"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:background="@drawable/common_view_click_bg_selector"
            android:gravity="center"
            android:text="@string/widget_clip_love"
            android:textColor="@color/c_A0A0A0"
            android:textSize="@dimen/textSize_17" />


        <TextView
            android:id="@+id/tv_clip_pentagon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:background="@drawable/common_view_click_bg_selector"
            android:gravity="center"
            android:text="@string/widget_clip_pentagon"
            android:textColor="@color/c_A0A0A0"
            android:textSize="@dimen/textSize_17" />

    </LinearLayout>
</LinearLayout>