<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_permission01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/app_permission01"
            android:textColor="@color/c_121212"
            android:textSize="@dimen/textSize_16" />

        <TextView
            android:id="@+id/tv_permission02"
            android:layout_below="@id/tv_permission01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:gravity="start"
            android:text="@string/app_permission02"
            android:textColor="@color/c_121212"
            android:textSize="@dimen/textSize_16" />

        <TextView
            android:id="@+id/tv_permission03"
            android:layout_below="@id/tv_permission02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:gravity="start"
            android:text="@string/app_permission03"
            android:textColor="@color/c_121212"
            android:textSize="@dimen/textSize_16" />
    </RelativeLayout>
</RelativeLayout>