<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:background="@color/c_171925">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/margin_30"
            android:layout_height="@dimen/margin_30"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_15"
            android:onClick="onClick"
            android:src="@drawable/common_iv_back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_25"
            android:layout_toEndOf="@id/iv_back"
            android:text="@string/widget_select"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_20" />


        <ImageView
            android:id="@+id/iv_make"
            android:layout_width="@dimen/margin_25"
            android:layout_height="@dimen/margin_25"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_15"
            android:layout_marginEnd="@dimen/margin_15"
            android:onClick="onClick"
            android:src="@drawable/make_work_btn" />
    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_below="@id/titleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:overScrollMode="never"
            android:scrollbars="none" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/ll_make_tip_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:onClick="onClick"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_widget"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_16" />

        <TextView
            android:id="@+id/tv_make"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/no_local_widget_tip_bg"
            android:text="@string/go_to_make_widget"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_18" />
    </LinearLayout>

</RelativeLayout>