<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_10"
                android:src="@drawable/widget_progress_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_30"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_5"
                android:gravity="center"
                android:text="@string/widget_progress"
                android:textColor="@color/c_A0A0A0"
                android:textSize="@dimen/textSize_15" />

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_30"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_15"
                android:layout_marginEnd="@dimen/margin_15"
                android:background="@color/c_F7F6F6"
                android:gravity="center"
                android:onClick="onClick"
                android:textColor="@color/c_A0A0A0"
                android:textSize="@dimen/textSize_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_10"
                android:src="@drawable/widget_progress_style_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_30"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_5"
                android:gravity="center"
                android:text="@string/widget_progress_type"
                android:textColor="@color/c_A0A0A0"
                android:textSize="@dimen/textSize_15" />

            <TextView
                android:id="@+id/tv_progress_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_30"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_15"
                android:layout_marginEnd="@dimen/margin_15"
                android:background="@color/c_F7F6F6"
                android:gravity="center"
                android:onClick="onClick"
                android:textColor="@color/c_A0A0A0"
                android:textSize="@dimen/textSize_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_10"
                android:src="@drawable/widget_progress_mode_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_30"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_5"
                android:gravity="center"
                android:text="@string/widget_progress_mode"
                android:textColor="@color/c_A0A0A0"
                android:textSize="@dimen/textSize_15" />

            <TextView
                android:id="@+id/tv_progress_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_30"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_15"
                android:layout_marginEnd="@dimen/margin_15"
                android:background="@color/c_F7F6F6"
                android:gravity="center"
                android:onClick="onClick"
                android:textColor="@color/c_A0A0A0"
                android:textSize="@dimen/textSize_16" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_color_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_10"
                android:src="@drawable/widget_progress_color_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_30"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/margin_5"
                        android:gravity="center"
                        android:text="@string/widget_progress_fore_color"
                        android:textColor="@color/c_A0A0A0"
                        android:textSize="@dimen/textSize_15" />
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_30"
                        android:background="@color/c_F7F6F6"
                        android:layout_marginStart="@dimen/margin_15"
                        android:layout_marginEnd="@dimen/margin_15"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/tv_foreColor"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:onClick="onClick"
                            android:layout_margin="@dimen/margin_2" />
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_30"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/margin_5"
                        android:gravity="center"
                        android:text="@string/widget_progress_bg_color"
                        android:textColor="@color/c_A0A0A0"
                        android:textSize="@dimen/textSize_15" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_30"
                        android:background="@color/c_F7F6F6"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/margin_15"
                        android:layout_marginEnd="@dimen/margin_15"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/tv_bgColor"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:onClick="onClick"
                            android:layout_margin="@dimen/margin_2" />
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_width_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginBottom="@dimen/margin_5"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_10"
                android:src="@drawable/widget_progress_height_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_30"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_5"
                android:gravity="center"
                android:text="@string/widget_progress_height"
                android:textColor="@color/c_A0A0A0"
                android:textSize="@dimen/textSize_15" />

            <com.fax.showdt.view.bubbleseekbar.BubbleSeekBar
                android:id="@+id/seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="@dimen/margin_2"
                android:layout_marginStart="@dimen/margin_12"
                android:layout_marginEnd="@dimen/margin_12"
                app:bsb_hide_bubble="false"
                app:bsb_max="75"
                app:bsb_min="1"
                app:bsb_progress="17"
                app:bsb_second_track_color="@color/c_A0A0A0"
                app:bsb_track_color="@color/c_E0DFDF"
                app:bsb_track_size="1.6dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>